--- a/src/index.css
+++ b/src/index.css
@@ -68,8 +68,7 @@ body {
 
 h1,
 h2,
-h3,
-h4 {
+h3 {
   color: var(--foreground);
 }
 li,
@@ -453,6 +452,7 @@ a {
   align-items: center;
   width: 85vw;
   height: 70vh;
+  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
 }
 
 .card-one,
@@ -465,32 +465,29 @@ a {
   align-items: center;
   width: 50%;
   height: 50%;
+
   /* border-radius: 0.3rem; */
 }
 
 .card-two,
-.card-three {
-  background-color: var(--foreground);
-  border: 1px solid var(--background);
-  overflow-x: hidden;
-}
-
+.card-three,
 .card-one,
 .card-four {
   background-color: var(--background);
-  border: 1px solid var(--foreground);
+  /* border: 1px solid #9e9d9d !important; */
+
   overflow-x: hidden;
 }
 
-.card-one .projects-img-wrapper,
-.card-one .projects-details {
+.projects-img-wrapper,
+.projects-details {
   display: grid;
-  justify-items: flex-start;
-  align-items: flex-start;
+  justify-items: center;
+  align-items: center;
   width: 50%;
   height: 100%;
 }
-.card-one .projects-img-wrapper img {
+.projects-img-wrapper img {
   object-fit: cover;
   width: 100%;
   height: 100%;
@@ -502,7 +499,6 @@ a {
   align-items: center;
   width: 100%;
   height: 100%;
-
   background-color: var(--background) !important;
 }
 
