--- a/src/index.css
+++ b/src/index.css
@@ -452,7 +452,7 @@ a {
   align-items: center;
   width: 85vw;
   height: 70vh;
-  box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+  /* box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23); */
 }
 
 .card-one,
@@ -463,10 +463,16 @@ a {
   justify-content: flex-start;
   flex-wrap: wrap;
   align-items: center;
-  width: 50%;
-  height: 50%;
+  width: 47%;
+  height: 47%;
   background-color: var(--background);
   overflow-x: hidden;
+  border: 1px solid #9e9d9d;
+}
+
+.card-one,
+.card-three {
+  margin-right: 1rem;
 }
 
 .projects-img-wrapper,
@@ -560,7 +566,7 @@ a {
 .details-btn-demo button {
   width: 70%;
   height: 2rem;
-  background: var(--gold-highlight-color);
+  background: var(--title-light-gray-color);
   border: none;
 }
 
