--- a/src/index.css
+++ b/src/index.css
@@ -822,41 +822,8 @@ a:hover {
   }
 }
 
-@media (max-width: 1600px) {
-  /*=======================================
-==>  Right Navigation 
-=========================================*/
+@media (max-width: 1275px) {
   .navigation-bar {
-    position: absolute !important;
-    top: 0;
-    left: 7% !important;
+    left: 65%;
   }
-
-  .navigation-bar p,
-  .navigation-bar a {
-    font-family: "Open Sans", sans-serif;
-    font-size: 0.9rem;
-    font-weight: 600;
-    letter-spacing: 0.1em;
-    text-transform: uppercase;
-    color: var(--foreground) !important;
-    border: none;
-    background-color: transparent;
-    padding: 0.2rem;
-    margin: 0.2rem;
-    margin-top: 3.5rem;
-    list-style: none;
-    text-decoration: none;
-    transition: 0.5s;
-  }
-
-  .navigation-bar a:hover,
-  .navigation-bar p:hover {
-    cursor: pointer;
-    box-shadow: inset 0 -5px 0 0 #e493129c;
-  }
-
-  /*=======================================
-==>  End - Right Navigation 
-=========================================*/
 }
