--- a/src/Components/Home/home-CSS/home-style.css
+++ b/src/Components/Home/home-CSS/home-style.css
@@ -1,69 +1,29 @@
+@import url("https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap");
 
-@import url('https://fonts.googleapis.com/css2?family=Open+Sans:wght@300&display=swap');
-
-
-
-.section-container{
-    display: flex;
-    display: flex; 
-    flex-direction: column; 
-    align-items: center;
-    padding: 0.5rem;
+.section-container {
+  display: flex;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding: 0.5rem;
 }
 
-img{
-    width: 7rem;
+img {
+  width: 7rem;
 }
 
-p{
-    font-family: 'Open Sans', sans-serif;
-    font-size: 1.1rem;    
+p {
+  font-family: "Open Sans", sans-serif;
+  font-size: 1.1rem;
 }
 
-
-
-
-
-
-/* .pulse {
-    animation-name: pulse_animation;
-    animation-duration: 5000ms;
-    transform-origin:70% 70%;
-    animation-iteration-count: infinite;
-    animation-timing-function: linear;
-}
-
-@keyframes pulse_animation {
-    0% { transform: scale(1); }
-    30% { transform: scale(1); }
-    40% { transform: scale(1.08); }
-    50% { transform: scale(1); }
-    60% { transform: scale(1); }
-    70% { transform: scale(1.05); }
-    80% { transform: scale(1); }
-    100% { transform: scale(1); }
-} */
-
-/* .pulse {
-
-    position: relative;
-    border: none;
-    box-shadow: 0 0 0 0 rgba(232, 76, 61, 0.7);
-   
-    background-size:cover;
-    background-repeat: no-repeat;
-    cursor: pointer;
-    -webkit-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-    -moz-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-    -ms-animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
-    animation: pulse 1.25s infinite cubic-bezier(0.66, 0, 0, 1);
+@media (max-width: 1275px) {
+  img {
+    width: 6rem;
   }
-  .pulse:hover 
-  {
-    -webkit-animation: none;-moz-animation: none;-ms-animation: none;animation: none;
+
+  p {
+    font-family: "Open Sans", sans-serif;
+    font-size: 1.1rem;
   }
-  
-  @-webkit-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-  @-moz-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-  @-ms-keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}}
-  @keyframes pulse {to {box-shadow: 0 0 0 45px rgba(232, 76, 61, 0);}} */
+}
