--- a/src/index.css
+++ b/src/index.css
@@ -473,6 +473,10 @@ a:hover {
   width: 50%;
   height: 100%;
 }
+.projects-img-wrapper {
+  width: 45%;
+}
+
 .projects-img-wrapper img {
   object-fit: cover;
   width: 100%;
@@ -882,23 +886,15 @@ a:hover {
     justify-content: center;
     flex-wrap: wrap;
     align-items: center;
-    width: 85vw;
-    height: 75vh;
+    width: 90vw;
+    height: 78vh;
   }
 
   .card-one,
   .card-two,
   .card-three,
   .card-four {
-    display: flex;
-    justify-content: flex-start;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 47%;
-    height: 48%;
-    background-color: var(--background);
-    overflow-x: hidden;
-    box-shadow: 0 10px 20px rgba(0, 0, 0, 0.19), 0 6px 6px rgba(0, 0, 0, 0.23);
+    width: 48%;
   }
 
   .card-one,
@@ -908,101 +904,24 @@ a:hover {
 
   .projects-img-wrapper,
   .projects-details {
-    display: grid;
-    justify-items: center;
-    align-items: center;
-    width: 50%;
-    height: 100%;
+    width: 45%;
   }
-  .projects-img-wrapper img {
-    object-fit: cover;
-    width: 100%;
-    height: 100%;
-  }
-  .details-wrapper {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-evenly;
-    align-items: center;
-    width: 100%;
-    height: 100%;
-    background-color: var(--background) !important;
+
+  .projects-details {
+    width: 55%;
   }
 
   .details-title,
   .details-desc {
     width: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
   }
-  .details-title h1 {
-    color: var(--foreground);
-    font-size: 1.3em;
+  .details-title {
+    height: 1.8rem;
   }
   .details-desc {
     padding: 0 0.4em;
     color: var(--foreground);
-  }
-  .details-desc p {
-    line-height: 1.5rem;
-    font-size: 1em;
-    padding: 1rem;
-  }
-
-  .details-featured {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    color: var(--foreground);
-  }
-
-  .details-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-  }
-
-  .details-btn {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 100%;
-    height: auto;
-  }
-
-  .details-btn-github,
-  .details-btn-demo {
-    width: 40%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .details-btn-github button,
-  .details-btn-demo button {
-    width: 70%;
-    height: 2rem;
-    background: var(--title-light-gray-color);
-    border: none;
-  }
-
-  .details-btn-github button a,
-  .details-btn-demo button a {
-    color: var(--main-light-gray-bg);
-    letter-spacing: 0.2rem;
-    text-transform: uppercase;
-    transition: ease-in-out 0.5s;
-  }
-
-  .details-btn-github button a:hover,
-  .details-btn-demo button a:hover {
-    cursor: pointer;
-    color: var(--dark-mode-bg) !important;
-    background: transparent !important;
+    height: 45%;
   }
 
   /*=======================================
