Adjusting About Me resume sections and style

--- a/src/index.css
+++ b/src/index.css
@@ -502,6 +502,7 @@ a:hover {
 .details-title h1 {
   color: var(--foreground);
   font-size: 1.3em;
+  color: #26b2e0;
 }
 .details-desc {
   padding: 0 0.4em;
@@ -874,6 +875,137 @@ a:hover {
 ==>         About
 =========================================
 */
+
+  .about-container {
+  }
+
+  .about-container {
+  }
+
+  .about-left,
+  .about-right {
+  }
+
+  .left-content {
+    width: 100%;
+    height: 100%;
+    color: var(--foreground);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 0.3rem;
+  }
+
+  .about-left-p,
+  #expo {
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    line-height: 5rem;
+  }
+  .about-left-p-2 {
+    text-align: left;
+    font-size: 1.7rem;
+    font-weight: 600;
+    letter-spacing: 0.2rem;
+    line-height: 4rem;
+  }
+
+  .aboutText {
+    position: "absolute";
+    top: 50%;
+    max-width: 90%;
+    max-height: 60% !important;
+    overflow-x: hidden;
+  }
+
+  .p-after-fe,
+  .p-after-be {
+    font-size: 2.6rem !important;
+    font-weight: 800 !important;
+  }
+
+  .p-after-fe-2,
+  .p-after-be-2 {
+    font-size: 2.1rem !important;
+    font-weight: 800 !important;
+  }
+
+  .p-after-fe::after {
+    content: "";
+    max-width: 22vw;
+    height: 1px !important;
+    background: #dd9116b6;
+    border-radius: 1rem;
+    display: block;
+    padding: 0.2rem;
+    z-index: -1;
+    margin-top: -1.8rem;
+    margin-left: 5rem;
+  }
+
+  .p-after-be::after {
+    content: "";
+    max-width: 10.5vw;
+    height: 1px !important;
+    background: #dd9116b6;
+    border-radius: 1rem;
+    display: block;
+    padding: 0.2rem;
+    z-index: -1;
+    margin-top: -1.9rem;
+    margin-left: 4.5rem;
+  }
+
+  .p-after-fe-2::after {
+    content: "";
+    max-width: 24vw;
+    height: 1px !important;
+    background: #dd9116b6;
+    border-radius: 1rem;
+    display: block;
+    padding: 0.2rem;
+    z-index: -1;
+    margin-top: -1.5rem;
+    margin-left: 0rem;
+  }
+
+  .p-after-be-2::after {
+    content: "";
+    max-width: 21vw;
+    height: 1px !important;
+    background: #dd9116b6;
+    border-radius: 1rem;
+    display: block;
+    padding: 0.2rem;
+    z-index: -1;
+    margin-top: -1.5rem;
+    margin-left: -5rem;
+  }
+  .about-left-p span {
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 600;
+  }
+  .about-left-p-2 span {
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 600;
+  }
+
+  .right-content {
+    width: 99%;
+    height: 100%;
+    color: var(--background);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 0.3rem;
+    padding: 1rem;
+  }
 
   /*
 =======================================
