--- a/src/index.css
+++ b/src/index.css
@@ -501,7 +501,6 @@ a:hover {
 .details-title h1 {
   color: var(--foreground);
   font-size: 1.3em;
-  color: #26b2e0;
 }
 .details-desc {
   padding: 0 0.4em;
@@ -613,7 +612,8 @@ a:hover {
   letter-spacing: 0.1rem;
   line-height: 5rem;
 }
-.about-left-p-2 {
+.about-left-p-2,
+.about-left-p-3 {
   text-align: left;
   font-size: 1.7rem;
   font-weight: 600;
@@ -680,6 +680,19 @@ a:hover {
   margin-left: 0rem;
 }
 
+.p-after-fe-3::after {
+  content: "";
+  max-width: 16vw;
+  height: 1px !important;
+  background: #dd9116b6;
+  border-radius: 1rem;
+  display: block;
+  padding: 0.2rem;
+  z-index: -1;
+  margin-top: -1.5rem;
+  margin-left: 0rem;
+}
+
 .p-after-be-2::after {
   content: "";
   max-width: 21vw;
@@ -697,7 +710,8 @@ a:hover {
   font-size: 2rem;
   font-weight: 600;
 }
-.about-left-p-2 span {
+.about-left-p-2 span,
+.about-left-p-3 span {
   text-align: left;
   font-size: 2rem;
   font-weight: 600;
@@ -876,13 +890,238 @@ a:hover {
 */
 
   .about-container {
-  }
-
-  .about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    height: 70vh;
   }
 
   .about-left,
   .about-right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+  }
+
+  .left-content {
+    width: 100%;
+    height: 100%;
+
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 0.3rem;
+  }
+
+  .about-left-p,
+  #expo {
+    font-size: 1.7rem;
+    font-weight: 600;
+    line-height: 4rem;
+  }
+  .about-left-p-2 {
+    font-size: 1.7rem;
+    font-weight: 600;
+    letter-spacing: 0.1rem;
+    line-height: 3.5rem !important;
+  }
+
+  .aboutText {
+    max-width: 90%;
+    min-height: 70% !important;
+    overflow-x: hidden;
+  }
+
+  .p-after-fe,
+  .p-after-be {
+    font-size: 2rem !important;
+    font-weight: 600 !important;
+  }
+
+  .p-after-fe-2,
+  .p-after-be-2,
+  .p-after-fe-3 {
+    font-size: 1.8rem !important;
+    font-weight: 600 !important;
+  }
+
+  .p-after-fe::after {
+    max-width: 19vw;
+    margin-top: -1.4rem;
+    margin-left: 4.5rem;
+  }
+
+  .p-after-be::after {
+    max-width: 9.5vw;
+    margin-top: -1.5rem;
+    margin-left: 4.1rem;
+  }
+
+  .p-after-fe-2::after {
+    max-width: 22vw;
+    border-radius: 1rem;
+    margin-top: -1.2rem;
+    margin-left: 0rem;
+  }
+
+  .p-after-fe-3::after {
+    max-width: 19vw;
+    margin-top: -1.5rem;
+    margin-left: 0rem;
+  }
+
+  .p-after-be-2::after {
+    max-width: 15vw;
+    margin-top: -1.2rem;
+    margin-left: 2.5rem;
+  }
+  .about-left-p span {
+    text-align: left;
+    font-size: 1.8rem;
+    font-weight: 600;
+  }
+  .about-left-p-2 span {
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 600;
+  }
+
+  .right-content {
+    width: 99%;
+    height: 100%;
+    color: var(--background);
+    display: flex;
+    flex-direction: column;
+    justify-content: flex-start;
+    align-items: flex-start;
+    border-radius: 0.3rem;
+    padding: 1rem;
+  }
+
+  /*
+=======================================
+==>         Projects
+=========================================
+*/
+
+  .projects-container {
+    display: flex;
+    justify-content: center;
+    flex-wrap: wrap;
+    align-items: center;
+    width: 90vw;
+    height: 78vh;
+  }
+
+  .card-one,
+  .card-two,
+  .card-three,
+  .card-four {
+    width: 48%;
+  }
+
+  .card-one,
+  .card-three {
+    margin-right: 1rem;
+  }
+
+  .projects-img-wrapper,
+  .projects-details {
+    width: 45%;
+  }
+
+  .projects-details {
+    width: 55%;
+  }
+
+  .details-title,
+  .details-desc {
+    width: 100%;
+  }
+  .details-title {
+    height: 1.8rem;
+  }
+  .details-desc {
+    padding: 0 0.4em;
+    color: var(--foreground);
+    height: 45%;
+  }
+
+  /*=======================================
+==>  END - Project Container 
+=========================================*/
+
+  /*
+=======================================
+==>         Contact
+=========================================
+*/
+}
+
+@media (max-width: 1305px) {
+  /*
+=======================================
+==>         Home Page
+=========================================
+*/
+  .navigation-bar {
+    top: -2%;
+    left: 70%;
+  }
+
+  #left-logo,
+  #dark-mode-left-logo,
+  #left-icons,
+  #dark-mode-left-icons {
+    left: 2%;
+  }
+
+  #left-logo,
+  #dark-mode-left-logo {
+    top: -3%;
+  }
+  /*=======================================
+==>  LightMode Right-Bottom-Buttons  
+=========================================*/
+
+  .btn-move-right {
+    display: none;
+  }
+
+  .btn-move-left {
+    display: none;
+  }
+
+  /*=======================================
+==>  END - LightMode Right-Bottom-Buttons  
+=========================================*/
+
+  /*
+=======================================
+==>         About
+=========================================
+*/
+
+  .about-container {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 80vw;
+    height: 70vh;
+    color: var(--foreground);
+  }
+
+  .about-left,
+  .about-right {
+    width: 50%;
+    height: 100%;
+    display: flex;
+    justify-content: center;
+    align-items: center;
   }
 
   .left-content {
@@ -916,7 +1155,7 @@ a:hover {
     position: "absolute";
     top: 50%;
     max-width: 90%;
-    max-height: 60% !important;
+    min-height: 70% !important;
     overflow-x: hidden;
   }
 
@@ -961,6 +1200,18 @@ a:hover {
   .p-after-fe-2::after {
     content: "";
     max-width: 24vw;
+    height: 1px !important;
+    background: #dd9116b6;
+    border-radius: 1rem;
+    display: block;
+    padding: 0.2rem;
+    z-index: -1;
+    margin-top: -1.5rem;
+    margin-left: 0rem;
+  }
+  .p-after-fe-3::after {
+    content: "";
+    max-width: 20vw;
     height: 1px !important;
     background: #dd9116b6;
     border-radius: 1rem;
