--- a/src/index.css
+++ b/src/index.css
@@ -740,14 +740,14 @@ a:hover {
   height: 70vh;
 }
 .contact-title {
-  font-size: 8rem;
+  font-size: 7.8rem;
   text-transform: uppercase;
   margin: 0 !important;
-  letter-spacing: 0.4rem;
+  letter-spacing: 0.2rem;
 }
 .contact-title::after {
   content: "";
-  max-width: 23.5vw;
+  max-width: 30vw;
   height: 1px !important;
   background: #dd9116b6;
   border-radius: 1rem;
@@ -822,26 +822,15 @@ a:hover {
   font-size: 6px;
 }
 
-@media (max-width: 750px) {
-  .wrapper-contact {
-    display: grid;
-    grid-template-columns: 1fr 2fr;
-  }
-
-  .wrapper-contact > * {
-    padding: 2em;
-  }
-
-  .company-info h3,
-  .company-info ul,
-  .brand {
-    text-align: left;
-  }
-}
-
 /*
 =======================================
 ==>        Media Query 
+=========================================
+*/
+
+/*
+=======================================
+==>        Max-Width: 1605px
 =========================================
 */
 
@@ -974,9 +963,7 @@ a:hover {
   }
 
   .p-after-be-2::after {
-    max-width: 15vw;
-    margin-top: -1.2rem;
-    margin-left: 2.5rem;
+    display: none;
   }
   .about-left-p span {
     text-align: left;
@@ -1053,265 +1040,113 @@ a:hover {
   /*=======================================
 ==>  END - Project Container 
 =========================================*/
-
-  /*
-=======================================
-==>         Contact
-=========================================
-*/
 }
 
-@media (max-width: 1305px) {
-  /*
+/*
 =======================================
-==>         Home Page
+==>        Max-Width: 1305px
 =========================================
 */
+@media (max-width: 1405px) {
   .navigation-bar {
     top: -2%;
-    left: 70%;
-  }
-
-  #left-logo,
-  #dark-mode-left-logo,
-  #left-icons,
-  #dark-mode-left-icons {
-    left: 2%;
-  }
-
-  #left-logo,
-  #dark-mode-left-logo {
-    top: -3%;
-  }
-  /*=======================================
-==>  LightMode Right-Bottom-Buttons  
-=========================================*/
-
-  .btn-move-right {
-    display: none;
-  }
-
-  .btn-move-left {
-    display: none;
-  }
-
-  /*=======================================
-==>  END - LightMode Right-Bottom-Buttons  
-=========================================*/
-
-  /*
-=======================================
-==>         About
-=========================================
-*/
-
-  .about-container {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    width: 80vw;
-    height: 70vh;
-    color: var(--foreground);
-  }
-
-  .about-left,
-  .about-right {
-    width: 50%;
-    height: 100%;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-  }
-
-  .left-content {
-    width: 100%;
-    height: 100%;
-    color: var(--foreground);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border-radius: 0.3rem;
-  }
-
-  .about-left-p,
-  #expo {
-    text-align: left;
-    font-size: 2rem;
-    font-weight: 600;
-    letter-spacing: 0.1rem;
-    line-height: 5rem;
-  }
-  .about-left-p-2 {
-    text-align: left;
-    font-size: 1.7rem;
-    font-weight: 600;
-    letter-spacing: 0.2rem;
-    line-height: 4rem;
-  }
-
-  .aboutText {
-    position: "absolute";
-    top: 50%;
-    max-width: 90%;
-    min-height: 70% !important;
-    overflow-x: hidden;
-  }
-
-  .p-after-fe,
-  .p-after-be {
-    font-size: 2.6rem !important;
-    font-weight: 800 !important;
-  }
-
-  .p-after-fe-2,
-  .p-after-be-2 {
-    font-size: 2.1rem !important;
-    font-weight: 800 !important;
-  }
-
-  .p-after-fe::after {
-    content: "";
-    max-width: 22vw;
-    height: 1px !important;
-    background: #dd9116b6;
-    border-radius: 1rem;
-    display: block;
-    padding: 0.2rem;
-    z-index: -1;
-    margin-top: -1.8rem;
-    margin-left: 5rem;
-  }
-
-  .p-after-be::after {
-    content: "";
-    max-width: 10.5vw;
-    height: 1px !important;
-    background: #dd9116b6;
-    border-radius: 1rem;
-    display: block;
-    padding: 0.2rem;
-    z-index: -1;
-    margin-top: -1.9rem;
-    margin-left: 4.5rem;
-  }
-
-  .p-after-fe-2::after {
-    content: "";
-    max-width: 24vw;
-    height: 1px !important;
-    background: #dd9116b6;
-    border-radius: 1rem;
-    display: block;
-    padding: 0.2rem;
-    z-index: -1;
-    margin-top: -1.5rem;
-    margin-left: 0rem;
-  }
-  .p-after-fe-3::after {
-    content: "";
-    max-width: 20vw;
-    height: 1px !important;
-    background: #dd9116b6;
-    border-radius: 1rem;
-    display: block;
-    padding: 0.2rem;
-    z-index: -1;
-    margin-top: -1.5rem;
-    margin-left: 0rem;
-  }
-
-  .p-after-be-2::after {
-    content: "";
-    max-width: 21vw;
-    height: 1px !important;
-    background: #dd9116b6;
-    border-radius: 1rem;
-    display: block;
-    padding: 0.2rem;
-    z-index: -1;
-    margin-top: -1.5rem;
-    margin-left: -5rem;
-  }
-  .about-left-p span {
-    text-align: left;
-    font-size: 2rem;
-    font-weight: 600;
-  }
-  .about-left-p-2 span {
-    text-align: left;
-    font-size: 2rem;
-    font-weight: 600;
-  }
-
-  .right-content {
-    width: 99%;
-    height: 100%;
-    color: var(--background);
-    display: flex;
-    flex-direction: column;
-    justify-content: flex-start;
-    align-items: flex-start;
-    border-radius: 0.3rem;
-    padding: 1rem;
+    left: 65%;
   }
 
   /*
 =======================================
-==>         Projects
+==>         Projects - 1305px
 =========================================
 */
-
-  .projects-container {
-    display: flex;
-    justify-content: center;
-    flex-wrap: wrap;
-    align-items: center;
-    width: 90vw;
-    height: 78vh;
-  }
-
-  .card-one,
-  .card-two,
-  .card-three,
-  .card-four {
-    width: 48%;
-  }
-
-  .card-one,
-  .card-three {
-    margin-right: 1rem;
-  }
 
   .projects-img-wrapper,
   .projects-details {
-    width: 45%;
-  }
-
-  .projects-details {
-    width: 55%;
-  }
-
-  .details-title,
-  .details-desc {
     width: 100%;
   }
-  .details-title {
-    height: 1.8rem;
-  }
-  .details-desc {
-    padding: 0 0.4em;
-    color: var(--foreground);
-    height: 45%;
-  }
-
-  /*=======================================
-==>  END - Project Container 
-=========================================*/
 
   /*
 =======================================
 ==>         Contact
 =========================================
 */
+
+  .contact-title {
+    font-size: 7rem;
+    text-transform: uppercase;
+    margin: 0 !important;
+    letter-spacing: 0.1rem;
+  }
+  .contact-title::after {
+    content: "";
+    max-width: 30vw;
+    height: 1px !important;
+    background: #dd9116b6;
+    border-radius: 1rem;
+    display: block;
+    padding: 0.5rem;
+    z-index: -1;
+    margin-top: -2.5rem;
+    margin-left: 0rem;
+  }
+  #btn-form input {
+    width: 40%;
+  }
+}
+
+/*
+=======================================
+==>        Max-Width: 1100px
+=========================================
+*/
+@media (max-width: 1110px) {
+  .navigation-bar {
+    top: -2%;
+    left: 60%;
+  }
+  .contact-title {
+    font-size: 7rem;
+    text-transform: uppercase;
+    margin: 0 !important;
+    letter-spacing: 0.1rem;
+  }
+  .contact-title::after {
+    content: "";
+    max-width: 33vw;
+    z-index: -1;
+    margin-top: -2.5rem;
+    margin-left: 0rem;
+  }
+  #btn-form input {
+    width: 50%;
+  }
+  .wrapper-contact {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .wrapper-contact > * {
+    padding: 1em;
+  }
+}
+
+/*
+=======================================
+==>        Max-Width: 750px
+=========================================
+*/
+@media (max-width: 750px) {
+  .wrapper-contact {
+    display: grid;
+    grid-template-columns: 1fr 2fr;
+  }
+
+  .wrapper-contact > * {
+    padding: 2em;
+  }
+
+  .company-info h3,
+  .company-info ul,
+  .brand {
+    text-align: left;
+  }
 }
