--- a/src/index.css
+++ b/src/index.css
@@ -1127,6 +1127,25 @@ a:hover {
   .wrapper-contact > * {
     padding: 1em;
   }
+
+  /*
+=======================================
+==>         About
+=========================================
+*/
+
+  .about-left {
+    display: none;
+  }
+
+  .about-right {
+    width: 100%;
+    height: 100%;
+  }
+
+  .right-content {
+    padding: 0.5rem;
+  }
 }
 
 /*
