--- a/src/index.css
+++ b/src/index.css
@@ -1125,7 +1125,6 @@ a:hover {
 ==>         About
 =========================================
 */
-
   .about-left {
     display: none;
   }
@@ -1149,6 +1148,13 @@ a:hover {
   .navigation-bar {
     top: -2%;
     left: 50%;
+  }
+
+  #left-logo,
+  #dark-mode-left-logo,
+  #left-icons,
+  #dark-mode-left-icons {
+    left: 0.5%;
   }
 
   .contact-title {
@@ -1176,15 +1182,87 @@ a:hover {
     top: -2%;
     left: 30%;
   }
+  .navigation-bar .dark-mode-icon {
+    margin-right: 1.5rem;
+    margin-left: -1rem;
+  }
+  /*
+=======================================
+==>         About
+=========================================
+*/
+  .about-left {
+    display: block;
+    width: 100%;
+    height: 100%;
+  }
+  .left-content {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+  }
+  .p-after-fe,
+  .p-after-be {
+    font-size: 2rem !important;
+    font-weight: 600 !important;
+  }
+
+  .p-after-fe-2,
+  .p-after-be-2,
+  .p-after-fe-3 {
+    font-size: 1.8rem !important;
+    font-weight: 600 !important;
+  }
+
+  .p-after-fe::after {
+    max-width: 25vw;
+    margin-top: -1.4rem;
+  }
+
+  .p-after-be::after {
+    max-width: 25vw;
+  }
+
+  .p-after-fe-2::after {
+    max-width: 57vw;
+    border-radius: 1rem;
+    margin-top: -1.2rem;
+    margin-left: 0rem;
+  }
+
+  .p-after-fe-3::after {
+    max-width: 52vw;
+  }
+
+  .p-after-be-2::after {
+    display: none;
+  }
+  .about-left-p span {
+    text-align: left;
+    font-size: 1.8rem;
+    font-weight: 600;
+  }
+  .about-left-p-2 span {
+    text-align: left;
+    font-size: 2rem;
+    font-weight: 600;
+  }
+
+  .about-right {
+    display: none;
+  }
 
   .contact-title {
     display: none;
   }
+
   .wrapper-contact {
     display: grid;
     grid-template-columns: 1fr 2fr;
   }
-
   .wrapper-contact > * {
     padding: 2em;
   }
