--- a/src/index.css
+++ b/src/index.css
@@ -59,6 +59,10 @@ body {
   background: var(--background);
   -webkit-touch-callout: none;
   cursor: default;
+  -webkit-user-select: none;
+  -moz-user-select: -moz-none;
+  -ms-user-select: none;
+  user-select: none;
 }
 
 h1,
@@ -1287,6 +1291,18 @@ a:hover {
 ==>        Animations  
 =========================================
 */
+#divID {
+  width: 100%;
+  height: 100%;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+#divID:hover {
+  cursor: -moz-grab;
+  cursor: grab;
+}
 
 .animated {
   -webkit-animation-duration: 1s;
