Trying to create a burgermenu

--- a/src/index.css
+++ b/src/index.css
@@ -1304,6 +1304,9 @@ a:hover {
   cursor: grab;
 }
 
+.burger-menu {
+}
+
 .animated {
   -webkit-animation-duration: 1s;
   animation-duration: 1s;
