--- a/src/index.css
+++ b/src/index.css
@@ -121,7 +121,7 @@ a:hover {
 .navigation-bar {
   position: absolute !important;
   top: 0;
-  left: 76%;
+  left: 77.5%;
   display: flex;
   flex-direction: row;
   z-index: 99;
@@ -851,12 +851,9 @@ a:hover {
 ==>  LightMode Right-Bottom-Buttons  
 =========================================*/
 
-  .btn-move-right {
-    display: none;
-  }
-
-  .btn-move-left {
-    display: none;
+  .btn-move-right,
+  .dark-mode-btn-move-right {
+    left: 93vw;
   }
 
   /*=======================================
@@ -1094,6 +1091,11 @@ a:hover {
     top: -2%;
     left: 60%;
   }
+  .btn-move-right,
+  .dark-mode-btn-move-right {
+    left: 90vw;
+  }
+
   .contact-title {
     font-size: 7rem;
     text-transform: uppercase;
@@ -1139,6 +1141,11 @@ a:hover {
   .navigation-bar {
     top: -2%;
     left: 50%;
+  }
+
+  .btn-move-right,
+  .dark-mode-btn-move-right {
+    left: 88vw;
   }
 
   #left-logo,
@@ -1285,6 +1292,66 @@ a:hover {
     width: 50%;
   }
 }
+/*
+=======================================
+==>        Max-Width: 550px
+=========================================
+*/
+@media (max-width: 550px) {
+  .navigation-bar {
+    top: -5%;
+    left: 15%;
+  }
+  .navigation-bar .dark-mode-icon {
+    margin-right: 1.5rem;
+    margin-left: -1rem;
+  }
+
+  #dark-mode-left-logo,
+  #left-logo {
+    display: none;
+  }
+}
+
+@media (max-width: 490px) {
+  .navigation-bar {
+    top: -5%;
+    left: -1%;
+  }
+
+  .navigation-bar p,
+  .navigation-bar a {
+    font-size: 1rem;
+    padding: 0.2rem;
+  }
+
+  /*=======================================
+==>  LightMode Bottom-Left-Icons 
+=========================================*/
+
+  #left-icons,
+  #dark-mode-left-icons {
+    top: 90.5%;
+    flex-direction: row;
+    justify-content: space-between;
+    width: 77%;
+  }
+
+  #left-icons p,
+  #dark-mode-left-icons p {
+    font-size: 2rem;
+  }
+
+  #dark-mode-left-logo,
+  #left-logo {
+    display: none;
+  }
+
+  .btn-move-right,
+  .dark-mode-btn-move-right {
+    left: 85vw;
+  }
+}
 
 /*
 =======================================
@@ -1302,9 +1369,6 @@ a:hover {
 #divID:hover {
   cursor: -moz-grab;
   cursor: grab;
-}
-
-.burger-menu {
 }
 
 .animated {
