--- a/src/index.css
+++ b/src/index.css
@@ -824,7 +824,7 @@ a:hover {
   justify-content: center;
   align-items: center;
 }
-#divID:hover {
+.home-logo-p:hover {
   cursor: -moz-grab;
   cursor: grab;
 }
