--- a/src/index.css
+++ b/src/index.css
@@ -124,7 +124,7 @@ a:hover {
   left: 77.5%;
   display: flex;
   flex-direction: row;
-  z-index: 99;
+  z-index: 50;
   box-sizing: border-box;
   padding: 0.2rem;
 }
@@ -166,7 +166,7 @@ a:hover {
   left: 3%;
   display: flex;
   flex-direction: row;
-  z-index: 99;
+  z-index: 50;
 }
 #left-logo p {
   font-family: "Archivo Black", sans-serif;
@@ -212,7 +212,7 @@ a:hover {
   left: 3%;
   display: flex;
   flex-direction: row;
-  z-index: 99;
+  z-index: 50;
 }
 
 #dark-mode-left-logo p {
@@ -264,7 +264,7 @@ a:hover {
   align-items: flex-start;
   margin: 0;
   padding: 0;
-  z-index: 99;
+  z-index: 50;
 }
 
 #left-icons p {
@@ -272,7 +272,7 @@ a:hover {
   flex-direction: column;
   margin: 0;
   padding: 0;
-  z-index: 99;
+  z-index: 50;
   color: var(--foreground);
   padding: 0.3rem;
   cursor: pointer;
@@ -307,7 +307,7 @@ a:hover {
   align-items: flex-start;
   margin: 0;
   padding: 0;
-  z-index: 99;
+  z-index: 50;
 }
 
 #dark-mode-left-icons p {
@@ -315,7 +315,7 @@ a:hover {
   flex-direction: column;
   margin: 0;
   padding: 0;
-  z-index: 99;
+  z-index: 50;
   color: var(--title-light-gray-color);
   padding: 0.3rem;
   cursor: pointer;
@@ -361,7 +361,7 @@ a:hover {
   padding: 0.5rem;
   cursor: pointer;
   font-size: 1rem;
-  z-index: 500;
+  z-index: 50;
   background-color: #5454548c;
   color: var(--main-light-gray-bg);
   border: none;
@@ -396,7 +396,7 @@ a:hover {
   padding: 0.5rem;
   cursor: pointer;
   font-size: 1rem;
-  z-index: 500;
+  z-index: 50;
   background-color: rgba(253, 251, 246, 0.657);
   color: var(--title-dark-gray-color);
   border: none;
@@ -412,7 +412,7 @@ a:hover {
   padding: 0.5rem;
   cursor: pointer;
   font-size: 1rem;
-  z-index: 500;
+  z-index: 50;
   background-color: rgba(253, 251, 246, 0.657);
   color: var(--title-dark-gray-color);
   border: none;
@@ -830,6 +830,12 @@ a:hover {
   cursor: grab;
 }
 
+.side-drawer,
+.backdrop,
+.toggle-button,
+.side-draw-button {
+  display: none;
+}
 /*
 =====================================
 ==>        Media Query 
@@ -1202,12 +1208,75 @@ a:hover {
 @media (max-width: 750px) {
   .navigation-bar {
     top: -2%;
-    left: 30%;
+    left: 88%;
   }
   .navigation-bar .dark-mode-icon {
     margin-right: 1.5rem;
     margin-left: -1rem;
   }
+
+  .navigation-bar__item {
+    display: none;
+  }
+
+  .side-drawer,
+  .backdrop,
+  .toggle-button,
+  .side-draw-button {
+    display: block;
+  }
+  .toggle-button {
+    display: flex;
+    flex-direction: column;
+    justify-content: space-around;
+    height: 24px;
+    width: 30px;
+    background: transparent;
+    border: none;
+    cursor: pointer;
+    padding: 0;
+    box-sizing: border-box;
+  }
+
+  .toggle-button:focus {
+    outline: none;
+  }
+
+  .toggle-button__line {
+    width: 30px;
+    height: 2px;
+    background: var(--foreground);
+  }
+
+  .side-drawer {
+    height: 100%;
+    background: var(--background);
+    box-shadow: 1px 0px 7px rgba(0, 0, 0, 0.9);
+    position: fixed;
+    top: 0;
+    left: 70%;
+    width: 50%;
+    max-width: 300px;
+    z-index: 99 !important;
+    /* transform: translateX(200%); */
+    transition: transform 0.3s ease-out;
+    /* border-radius: 0 0 0 50rem; */
+  }
+  /* 
+  .side-drawer.open {
+    transform: translateX(0);
+  } */
+
+  .backdrop {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100vw;
+    height: 1000px;
+    background: #fca21165;
+    z-index: 10;
+  }
+
   /*
 =======================================
 ==>         About
